--- a/Assets/CSS/stylesheet.css
+++ b/Assets/CSS/stylesheet.css
@@ -7,6 +7,7 @@
         font-style: normal;
         font-variation-settings:
             "wdth" 100;
+            margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -26,6 +27,7 @@ font-family: "Fascinate", system-ui;
 .navConteiner{
     display: flex;
     justify-content: end;
+    text-align: center;
     gap: 2rem;
     padding-right: 4rem;
     background: var(--BGBaige);
@@ -66,4 +68,13 @@ font-family: "Fascinate", system-ui;
     width: 100%;
     height: 40px;
     object-fit: contain;
+}
+.BilledeCard img{
+    width: 400px;
+    height: 450px;
+    object-fit: cover;
+    border: solid 40px white;
+    border-bottom: solid 80px white;
+    border-radius: 30px;
+
 }
