--- a/Assets/CSS/stylesheet.css
+++ b/Assets/CSS/stylesheet.css
@@ -189,7 +189,7 @@ font-family: "Fascinate", system-ui;
 }
 
 .flip-card{
-    width: 3px;
+    width: 300px;
     height: 450px;
     perspective: 1000px;
     padding: 20px;
@@ -257,7 +257,7 @@ font-family: "Fascinate", system-ui;
     padding-right: 5px;
     border: solid 1px var(--BGGreen);
     margin-right: 20px;
-    width: 305px;
+    width: 100%;
 }
 .SeeMere{
 
